[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/world/obstacles/ObstacleManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/world/obstacles/ObstacleSmall.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/world/obstacles/ObstacleBig.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/world/coin/coin_patterns/CoinPattern3Straight.tscn" type="PackedScene" id=4]

[node name="ObstacleManager" type="Node2D"]
script = ExtResource( 1 )
obstacle_small = ExtResource( 2 )
obstacle_big = ExtResource( 3 )
CoinPattern = ExtResource( 4 )

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 360, 168 )

[node name="CoinSpawnPosition1" type="Position2D" parent="."]
position = Vector2( 480, 144 )

[node name="CoinSpawnPosition2" type="Position2D" parent="."]
position = Vector2( 360, 104 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="ObstaclesGroup" type="Node2D" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
